5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1679_1105.log
== TEST (2019-04-26 17:00:51) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada", a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheaon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta")
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 21
    elif (a.lower()=="turta")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 17:01:30) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada", a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheaon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 17:01:47) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada", a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheaon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 17:02:04) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada", a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheaon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 17:02:29) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada", a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheaon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.13994
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 17:04:11) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada", a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.19098
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 17:07:11) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada:", a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.160421
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
digite o nome: Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
digite o nome: Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
digite o nome: Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 17:09:05) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada:", a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta"):
	print("Casa: Tully")
elif:
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 23
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 17:09:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada:", a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta"):
	print("Casa: Tully")
elif
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 23
    elif
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 17:09:56) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada:", a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 17:10:31) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada:", a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 17:10:56) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada:", a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 17:11:12) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada:", a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 17:11:48) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada:", a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 17:13:30) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada:", a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 23:18:48) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada: ",a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 23:20:20) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada: ",a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta"):
	print("Casa: Tully")
elif:
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 23
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 23:21:06) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada: ",a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta"):
	print("Casa: Tully")
elif (a)
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 23
    elif (a)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 23:23:43) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada: ",a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 23:31:11) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
b="a"
print("Entrada: ",b)
if(b.lower()=="lobo"):
	print("Casa: Stark")
elif (b.lower()=="leao"):
	print("Casa: Lannister")
elif (b.lower()=="veado"):
	print("Casa: Baratheon")
elif (b.lower()=="dragao"):
	print("Casa: Targaryen")
elif (b.lower()=="rosa"):
	print("Casa: Tyrell")
elif (b.lower()=="sol"):
	print("Casa: Martell")
elif (b.lower()=="lula"):
	print("Casa: Greyjoy")
elif (b.lower()=="esfolado"):
	print("Casa: Bolton")
elif (b.lower()=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada:  a
Brasao invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 23:32:28) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada: ",a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 23:32:52) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada:",a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 23:33:11) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada:",a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 23:33:27) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada:",a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 23:33:39) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada:",a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 23:34:02) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada:",a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 23:34:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada:",a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 23:34:27) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada:",a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 23:34:51) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada:",a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 23:35:11) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada:",a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 23:35:39) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a=input("digite o nome: ")
print("Entrada:",a)
if(a.lower()=="lobo"):
	print("Casa: Stark")
elif (a.lower()=="leao"):
	print("Casa: Lannister")
elif (a.lower()=="veado"):
	print("Casa: Baratheon")
elif (a.lower()=="dragao"):
	print("Casa: Targaryen")
elif (a.lower()=="rosa"):
	print("Casa: Tyrell")
elif (a.lower()=="sol"):
	print("Casa: Martell")
elif (a.lower()=="lula"):
	print("Casa: Greyjoy")
elif (a.lower()=="esfolado"):
	print("Casa: Bolton")
elif (a.lower()=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.144816
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
